      After enabling it you need to reinventorize your hosts.
    * Windows Update Check: Now with caching, Thanks to Phil Randal and Patrick Schlüter
    * Windows Check_MK Agent: Now able to parse textfiles for logwatch output
    * Added new Checks sni_octopuse_cpu, sni_octopuse_status, sni_octopuse_trunks: These
      allow monitoring Siemens HiPath 3000/5000 series PBX.

1.2.0p3:
    Mulitisite
    * Added "view" parameter to dashlet_pnpgraph webservice
    * FIX: BI: Assuming "OK" for hosts is now possible
    * FIX: Fixed error in makeuri() calls when no parameters in URL
    * FIX: Try out mode in view editor does not show context buttons anymore

    WATO
    * Added "profile" option to be configurable via browser
    * FIX: It is now possible to create clusters in empty folders
    * FIX: Fixed problem with complaining empty ListOf() valuespecs
    * FIX: Users & Contacts uses case-insensitive sorting of 'Full name' column  
    * FIX: Removed focus of "Full name" attribute on editing a contact
    * FIX: fix layout bug in ValueSpec ListOfStrings (e.g. used in
           list of explicit host/services in rules)
    * FIX: fix inheritation of contactgroups from folder to hosts
    * FIX: fix sorting of users, fix lost user alias in some situations
    * FIX: Sites not using distritubed WATO now being skipped when determining
           the prefered peer

    BI:
    * FIX: Correct representation of (!), (!!) and (?) markers in check output

    Livestatus
    * FIX: comments_with_info in service table was always empty
    * FIX: check_icmp: fixed calculation of remaining length of output buffer
    
    Livecheck
    * FIX: fixed problem with long plugin output
    * FIX: added /0 termination to strings
    * FIX: changed check_type to be always active (0)
    * FIX: fix bug in assignment of livecheck helpers 
    * FIX: close inherited unused filedescriptors after fork()
    * FIX: kill process group of called plugin if timeout is reached